--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@
 html {
     font-size: 62.5%;
 }
+.container {
+    width: 100%;
+    height: 100vh;
+    background-color: #12121f;
+    color: #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
