--- a/style.css
+++ b/style.css
@@ -18,3 +18,9 @@ html {
     justify-content: center;
     align-items: center;
 }
+.calendar {
+    width: 45rem;
+    height: 52rem;
+    background-color: #222227;
+    box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
+}
