--- a/style.css
+++ b/style.css
@@ -35,3 +35,7 @@ html {
     text-align: center;
     text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
 }
+.month i {
+    font-size: 2.5rem;
+    cursor: pointer;
+}
