--- a/style.css
+++ b/style.css
@@ -39,3 +39,10 @@ html {
     font-size: 2.5rem;
     cursor: pointer;
 }
+.month h1 {
+    font-size: 3rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    margin-bottom: 1rem;
+}
