styling weekdays class

--- a/style.css
+++ b/style.css
@@ -49,3 +49,10 @@ html {
 .month p {
     font-size: 1.6rem;
 }
+.weekdays {
+    width: 100%;
+    height: 5rem;
+    padding: 0 0.4rem;
+    display: flex;
+    align-items: center;
+}
