styling days class

--- a/style.css
+++ b/style.css
@@ -66,3 +66,10 @@ html {
     align-items: center;
     text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
 }
+.days {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0.2rem;
+}
+  
