--- a/style.css
+++ b/style.css
@@ -72,4 +72,15 @@ html {
     flex-wrap: wrap;
     padding: 0.2rem;
 }
+.days div {
+    font-size: 1.4rem;
+    margin: 0.3rem;
+    width: calc(40.2rem / 7);
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+    transition: background-color 0.2s;
+}
   
