--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ html {
 .calendar {
     width: 45rem;
     height: 52rem;
-    background-color: #222227;
+    background-color: #a44dec;
     box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
 }
 .month {
     width: 100%;
     height: 12rem;
-    background-color: #167e56;
+    background-color: #7f20fc;
     display: flex;
     justify-content: space-between;
     align-items: center;
